--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Have a nice day
+  h1 Have a bad day  Fred
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
